bootup seq publish

--- a/_posts/2019-11-03-esp32-boot-seq.md
+++ b/_posts/2019-11-03-esp32-boot-seq.md
@@ -14,9 +14,7 @@ In this post i will explain about the ESP32 boot up sequence
 
 A single ESP32’s flash can contain multiple apps, as well as many different kinds of data (e.g. calibration data, filesystems, parameters storage etc). A partition table is flashed at 0x8000 containing which tells at which location what resides.
 
-![](https://lh3.googleusercontent.com/NJQIgMVwUKfCyChoAcrXQbr5CwrRxMRy4wiAflQuP7MIVkxmAu1Vvzoj-cgSdt1cAmLlHFXM7g2pA36xDWVQS2ZLRRclh690yDRId2YgHTyumh5-fW6RXlwd4VMysQUC0uANpfe6)
-
-Fig: Partition Table Address
+<img src="https://lh3.googleusercontent.com/NJQIgMVwUKfCyChoAcrXQbr5CwrRxMRy4wiAflQuP7MIVkxmAu1Vvzoj-cgSdt1cAmLlHFXM7g2pA36xDWVQS2ZLRRclh690yDRId2YgHTyumh5-fW6RXlwd4VMysQUC0uANpfe6" em=caption>
 
 **ESP32 Internal**
 
@@ -26,8 +24,6 @@ ESP32 module has 2 parts one is the ESP32 microcontroller itself and the other o
 - APP CPU
 
 ![](https://lh6.googleusercontent.com/xwFYV887r-xu51adSiY0CULZB6zY171si27Ing5Hz88bIm1FOHf1Kn9LRgOLWgYxTBTAZKCFBts8QcjuM-3W2t_qRW9u4Tpg0rcH0rw0cfyavguZwCzlIfgrV8uM5Z9GPP7d18tB)
-
-Fig: ESP32 Internal
 
 **Reset Sources**
 
@@ -78,7 +74,7 @@ Ref schematic:<https://dl.espressif.com/dl/schematics/esp32_devkitc_v4-sch.pdf>
 esptool.py -p /dev/ttyUSB0 -b 460800 --after hard_reset write_flash --flash_mode dio --flash_freq 40m --flash_size 4MB 0x8000 partition_table/partition-table.bin 0x1000 bootloader/bootloader.bin 0x10000 gpio.bin
 ```
 
-After successful build the idf.py tool calls**esptool.py**to flash
+After successful build the idf.py tool calls **esptool.py** to flash
 
 | Type            | Address Offset |
 | --------------- | -------------- |
@@ -123,9 +119,8 @@ I (230) cpu_start: Starting app cpu, entry point is 0x40080fec
 
 I (0) cpu_start: App cpu up.
 I (240) heap_init: Initializing. RAM available for dynamic allocation:
-
-- Application binary takes control & Starts FreeRtos Scheduler
 ```
+- Application binary takes control & Starts FreeRtos Scheduler
 
 ```text
 I (298) cpu_start: Starting scheduler on PRO CPU.
