--- a/_posts/2019-11-03-esp32-boot-seq.md
+++ b/_posts/2019-11-03-esp32-boot-seq.md
@@ -6,6 +6,7 @@ date: 2019-11-03
 categories: [esp32]
 tags: [firmware]
 comments: true
+featured_img: "https://lh6.googleusercontent.com/xwFYV887r-xu51adSiY0CULZB6zY171si27Ing5Hz88bIm1FOHf1Kn9LRgOLWgYxTBTAZKCFBts8QcjuM-3W2t_qRW9u4Tpg0rcH0rw0cfyavguZwCzlIfgrV8uM5Z9GPP7d18tB"
 ---
 
 In this post i will explain about the ESP32 boot up sequence
