commit before numbering last 2

--- a/_posts/2019-11-03-esp32-boot-seq.md
+++ b/_posts/2019-11-03-esp32-boot-seq.md
@@ -13,25 +13,47 @@ sitemap:
   changefreq: 'monthly'
 ---
 
-In this post i will explain about the ESP32 boot up sequence
+When We start to learn or play around a micrcontroller / SoC / Development Board we want to write a lot of code quickly and make use of all the available features / peripherals. But I think having proper knowledge on the boot sequence of the mcu should be of utmost urgency. 
 
-**Partition Table & FLash**
+I have seen embedded products getting stuck / hung in boot mode randomly due to lack of proper booting requirements. Most of the times the reasons are developer not spending enough time on reading the datasheet & missing out important hardware notes or fuse bit settings. In this blog post I would like to explain how ESP32 gets boot-ed. Hoping the read will be an enjoyable one ! :) 
 
-A single ESP32’s flash can contain multiple apps, as well as many different kinds of data (e.g. calibration data, filesystems, parameters storage etc). A partition table is flashed at 0x8000 containing which tells at which location what resides.
-
-<img src="https://lh3.googleusercontent.com/NJQIgMVwUKfCyChoAcrXQbr5CwrRxMRy4wiAflQuP7MIVkxmAu1Vvzoj-cgSdt1cAmLlHFXM7g2pA36xDWVQS2ZLRRclh690yDRId2YgHTyumh5-fW6RXlwd4VMysQUC0uANpfe6" em=caption>
 
 **ESP32 Internal**
 
-ESP32 module has 2 parts one is the ESP32 microcontroller itself and the other one is the Flash . They are connected via SPI . The microcontroller has 2 CPU , these are
+Here in this below picture you can see the internals of an ESP32 module . if you decap the metal plate of the module you will see inside It has mainly 2 silicon chips one is the esp32 mcu and other one is a SPI based flash chip. 
+
+<img src="https://lh5.googleusercontent.com/8WvqZWXf1DCf_henYiSVPQcKFoNZGgRgWoXHlV7om-PqxNZn6UEswDnqjqbS2Oj8hrDGrLOevnFmbd2BZ3Jl-c6j1rxeQnOQDkAjoY5Ji5rZGafSN_48wWgyqZfOVfm1LohdwtNi" width="720" height="480" style="display: block; margin: 0 auto">
+
+Now let's look into the following block diagram for better understanding what is inside. 
+
+![](https://lh6.googleusercontent.com/xwFYV887r-xu51adSiY0CULZB6zY171si27Ing5Hz88bIm1FOHf1Kn9LRgOLWgYxTBTAZKCFBts8QcjuM-3W2t_qRW9u4Tpg0rcH0rw0cfyavguZwCzlIfgrV8uM5Z9GPP7d18tB)
+
+Here you can see that the ESP32 module has one mcu and one flash chip, both being connected via SPI. The esp32 microcontroller itself has a small ROM . The contents of the ROM are pre-programmed by the silicon vendor(espressif)
+
+The important addresses are 
+
+| Type            | Address Offset |
+| --------------- | -------------- |
+| Application     | 0x10000        |
+| Partition Table | 0x8000         |
+| 2nd stage Bootloader      | 0x1000         |
+
+The microcontroller has 2 CPU , these are
 
 - PRO CPU
 - APP CPU
 
-![](https://lh6.googleusercontent.com/xwFYV887r-xu51adSiY0CULZB6zY171si27Ing5Hz88bIm1FOHf1Kn9LRgOLWgYxTBTAZKCFBts8QcjuM-3W2t_qRW9u4Tpg0rcH0rw0cfyavguZwCzlIfgrV8uM5Z9GPP7d18tB)
+**Partition Table & FLash**
+
+Now let's understand the partition table . Just like we divide our laptop's hard disks into different partitions for example Drive C:/D:/E: ; one can divide the SPI flash of the ESP32 module into multiple partitions. different partitions can hold different types of data (e.g. calibration data, filesystems, parameters storage, OTA backup etc). 
+
+Unlike other mcu manufacturer espressif gives us a lot of flexibility in flash space orientation provided the fact that the Flash is external of the mcu itself . Very clever and modular design! Obviously this type of SoC design has some drawbacks but we can talk on that later . Now back to partitioning . In order to implement the dividents A partition table needs to be flashed at memory address 0x8000. this table tells what kind of data gets into which partition. This can be configured using the menuconfig 
+
+<img src="https://lh3.googleusercontent.com/NJQIgMVwUKfCyChoAcrXQbr5CwrRxMRy4wiAflQuP7MIVkxmAu1Vvzoj-cgSdt1cAmLlHFXM7g2pA36xDWVQS2ZLRRclh690yDRId2YgHTyumh5-fW6RXlwd4VMysQUC0uANpfe6" em=caption>
 
 **Reset Sources**
 
+Before explaining the boot sequence we should know which are the reset sources of our mcu 
 ESP32 microcontroller has the following reset sources
 
 - Wake up from deep sleep
@@ -39,56 +61,50 @@ ESP32 microcontroller has the following reset sources
 - Watchdog (WDT)
 - Software (SWT)
 
-**Boot Sequence**
+**Flashing hardware tool Connection**
 
-We will go through the bootup sequence explaining each step in details
+  ![](https://lh3.googleusercontent.com/F3r26c9uK51hSD8CPH6J6-c2Uc8tgw_KAefhPlp_Je_mvAhMsydhnCCX8ZxbqAYeQoccihwybg0yDbJfkLAzetTs0azGwxNNBiqFjkkkhjmMO9D_qMdlQQHLU62FBIzbXTXqllR_)
 
-- MCU resets
+  The RTS & DTR lines of USB-UART chip CP2102 is connected to GPIO0 & EN pin of the mcu as shown in the above picture & below table 
 
-- PRO-CPU runs & does all initialization while APP-CPU is held in reset
+  | ESP32 Pin   | Serial Pin(CP2102) |
+  | ----------- | ------------------ |
+  | EN          | RTS                |
+  | IO0 (GPIO0) | DTR                |
 
-- CPU jumps to Reset vector
+**Flashing command**
 
-- Reset vector is located at address 0x40000400 in the ROM
-
-- Startup code(1st stage bootloader) is called from reset vector
-
-- 1st stage bootloader checks Reset reason
-
-- 1st stage bootloader checks if UART or SDIO (sd-card) download mode is requested or not , if so it waits for the code to be downloaded
-
-  - The ESP32 will enter the serial bootloader when GPIO0 is held LOW on reset.
-  - The Esptool.py can make esp32 automatically enter the bootloader mode on esp32_devkits_v4 board using the RTS & DTR modem status lines to toggle GPIO0 & EN pins automatically
-  - The RTS & DTR lines of USB-UART chip CP2102 is connected to GPIO0 & EN pin as shown in the following picture
-
-![](https://lh3.googleusercontent.com/F3r26c9uK51hSD8CPH6J6-c2Uc8tgw_KAefhPlp_Je_mvAhMsydhnCCX8ZxbqAYeQoccihwybg0yDbJfkLAzetTs0azGwxNNBiqFjkkkhjmMO9D_qMdlQQHLU62FBIzbXTXqllR_)
-
-Ref schematic:<https://dl.espressif.com/dl/schematics/esp32_devkitc_v4-sch.pdf>
-
-| ESP32 Pin   | Serial Pin(CP2102) |
-| ----------- | ------------------ |
-| EN          | RTS                |
-| IO0 (GPIO0) | DTR                |
-
-- When we build our project using** idf.py** of the esp-sdk the built tool builds the bootloader binary file along with the application binary, for example during the build of the gpio example 2 bin files get generated named bootloader.bin & gpio.bin
-
-- If the 1st stage bootloader finds that UART download should be performed then it does so and puts the bootloader.bin at offset 0x1000 in flash. This bootloader is called the 2nd stage bootloader.
-
+When we build our project using **idf.py** of the esp-sdk, the built tool builds the bootloader binary file along with the application binary, for example during the build of the gpio example 2 bin files get generated named bootloader.bin & gpio.bin. 
 
 ```bash
 esptool.py -p /dev/ttyUSB0 -b 460800 --after hard_reset write_flash --flash_mode dio --flash_freq 40m --flash_size 4MB 0x8000 partition_table/partition-table.bin 0x1000 bootloader/bootloader.bin 0x10000 gpio.bin
 ```
 
-After successful build the idf.py tool calls **esptool.py** to flash
+**Boot Sequence**
 
-| Type            | Address Offset |
-| --------------- | -------------- |
-| Application     | 0x10000        |
-| Partition Table | 0x8000         |
-| Bootloader      | 0x1000         |
+Following the reset of any kinds listed above, ESP32 will go through the following bootup sequence.
 
-- 1st stage bootloader jumps to 2nd stage bootloader .
-- 2nd stage bootloader runs , prints some informations via UART0 , reads partition table from offset 0x8000, prints partition table
+1. MCU resets
+
+2. PRO-CPU runs & does all the initialization while APP-CPU is held in reset
+
+3. CPU jumps to Reset vector
+
+4. Reset vector is located at address 0x40000400 in the ROM
+
+5. Startup code(1st stage bootloader) is called from reset vector
+
+6. 1st stage bootloader checks Reset reason
+
+7. 1st stage bootloader checks if UART or SDIO (sd-card) download mode is requested or not , if so it waits for the incoming binary code to be downloaded (This event happens during flashing process)
+
+8. Assuming flashing command is being executed and GPIO0 is held LOW on reset by the flashing hardware (CP2102) then The ESP32 will enter into the bootloader mode.
+
+9. If the 1st stage bootloader finds that UART download should be performed then it does so and puts the received bootloader.bin at offset 0x1000 in flash. ( This bootloader is called the 2nd stage bootloader). then it writes the application binary at the pre-set offset Address (0x10000)
+
+10. So once 1st stage bootloader finishes writing the binary data given by esptool.py desktop app, it jumps to 2nd stage bootloader.
+
+11. Getting jumped from 1st stage bootloader, The 2nd stage bootloader takes in control and starts running, at start it prints some informations via UART0 , reads partition table from offset 0x8000 & prints the partition table
 
 ```text
 I (74) boot: Chip Revision: 1
@@ -107,7 +123,7 @@ I (85) boot:  2 factory          factory app      00 00 00010000 00100000
 I (92) boot: End of partition table
 I (96) boot_comm: chip revision: 1, min. application chip revision: 0
 ```
-- Loads app offset 0x10000 & Starts APP-CPU
+- after 2nd stage bootloder gets done printing some useful information, PRO-CPU prints some other info and trasnfers the control over to the the APP-CPU
 
 ```text
 I (191) boot: Loaded app from partition at offset 0x10000
@@ -125,15 +141,23 @@ I (230) cpu_start: Starting app cpu, entry point is 0x40080fec
 I (0) cpu_start: App cpu up.
 I (240) heap_init: Initializing. RAM available for dynamic allocation:
 ```
-- Application binary takes control & Starts FreeRtos Scheduler
+- APP-CPU starts executing the Application binary machine instructions & Starts the FreeRtos Scheduler thus our application begins running
 
 ```text
 I (298) cpu_start: Starting scheduler on PRO CPU.
 I (0) cpu_start: Starting scheduler on APP CPU.
 ```
 
+- During operation / normal runtime If any of the reset reason triggers then all the sequence happens again. 
+
+- If The First stage bootloder does not get any data over UART within a timeout then it jumps to the 2nd stage bootloader and all the subsequent steps occur as explained above.
+
+
+By embedding the 1st stage bootloader in esp32 mcu , espressif has made programming of the module very easy. This is one of the reason why esp32 module does not get bricked that much and the choice of the UART interface makes the experience much more easy compared to other mcu vendor ecosystems.
+
 **References:**
 
-<https://docs.espressif.com/projects/esp-idf/en/latest/api-guides/general-notes.html>
-<https://github.com/espressif/esptool/wiki/ESP32-Boot-Mode-Selection>
-<https://docs.espressif.com/projects/esp-idf/en/latest/api-guides/partition-tables.html>
+- <https://docs.espressif.com/projects/esp-idf/en/latest/api-guides/general-notes.html>
+- <https://github.com/espressif/esptool/wiki/ESP32-Boot-Mode-Selection>
+- <https://docs.espressif.com/projects/esp-idf/en/latest/api-guides/partition-tables.html>
+- <https://dl.espressif.com/dl/schematics/esp32_devkitc_v4-sch.pdf>  
