much more structured

--- a/_posts/2019-11-03-esp32-boot-seq.md
+++ b/_posts/2019-11-03-esp32-boot-seq.md
@@ -106,6 +106,14 @@ Following the reset of any kinds listed above, ESP32 will go through the followi
 
 11. Getting jumped from 1st stage bootloader, The 2nd stage bootloader takes in control and starts running, at start it prints some informations via UART0 , reads partition table from offset 0x8000 & prints the partition table
 
+12. after 2nd stage bootloder gets done printing some useful information, PRO-CPU prints some other info and trasnfers the control over to the the APP-CPU
+
+13. APP-CPU starts executing the Application binary machine instructions & Starts the FreeRtos Scheduler thus our application begins running
+
+14. During operation / normal runtime If any of the reset reason triggers then all the sequence happens again. 
+
+15. If The First stage bootloder does not get any data over UART within a timeout then it jumps to the 2nd stage bootloader and all the subsequent steps occur as explained above.
+
 ```text
 I (74) boot: Chip Revision: 1
 I (74) boot_comm: chip revision: 1, min. bootloader chip revision: 0
@@ -123,7 +131,6 @@ I (85) boot:  2 factory          factory app      00 00 00010000 00100000
 I (92) boot: End of partition table
 I (96) boot_comm: chip revision: 1, min. application chip revision: 0
 ```
-- after 2nd stage bootloder gets done printing some useful information, PRO-CPU prints some other info and trasnfers the control over to the the APP-CPU
 
 ```text
 I (191) boot: Loaded app from partition at offset 0x10000
@@ -141,19 +148,13 @@ I (230) cpu_start: Starting app cpu, entry point is 0x40080fec
 I (0) cpu_start: App cpu up.
 I (240) heap_init: Initializing. RAM available for dynamic allocation:
 ```
-- APP-CPU starts executing the Application binary machine instructions & Starts the FreeRtos Scheduler thus our application begins running
 
 ```text
 I (298) cpu_start: Starting scheduler on PRO CPU.
 I (0) cpu_start: Starting scheduler on APP CPU.
 ```
 
-- During operation / normal runtime If any of the reset reason triggers then all the sequence happens again. 
-
-- If The First stage bootloder does not get any data over UART within a timeout then it jumps to the 2nd stage bootloader and all the subsequent steps occur as explained above.
-
-
-By embedding the 1st stage bootloader in esp32 mcu , espressif has made programming of the module very easy. This is one of the reason why esp32 module does not get bricked that much and the choice of the UART interface makes the experience much more easy compared to other mcu vendor ecosystems.
+By embedding the 1st stage bootloader in esp32 mcu , espressif has made programming of the module very easy. This is one of the reason why esp32 module does not get bricked that much and the choice of the UART interface makes the programming experience much more easy compared to other mcu vendor ecosystems.
 
 **References:**
 
