updated boot seq post

--- a/_posts/2019-11-03-esp32-boot-seq.md
+++ b/_posts/2019-11-03-esp32-boot-seq.md
@@ -13,9 +13,9 @@ sitemap:
   changefreq: 'monthly'
 ---
 
-When We start to learn or play around a micrcontroller / SoC / Development Board we want to write a lot of code quickly and make use of all the available features / peripherals. But I think having proper knowledge on the boot sequence of the mcu should be of utmost urgency. 
+When We start to learn a micrcontroller or SoC, we want to write a lot of code quickly and make use of all the available features / peripherals. But I think acquiring proper knowledge on the boot sequence of an mcu is also very important. 
 
-I have seen embedded products getting stuck / hung in boot mode randomly due to lack of proper booting requirements. Most of the times the reasons are developer not spending enough time on reading the datasheet & missing out important hardware notes or fuse bit settings. In this blog post I would like to explain how ESP32 gets boot-ed. Hoping the read will be an enjoyable one ! :) 
+I have seen embedded products getting stuck / hung in boot mode. Most of the times the reasons are developer not spending enough time on reading the datasheet & missing out important hardware notes or fuse bit settings. Knowing the exact booting information will also help the programmer to plan or debug better. In this blog post I would like to explain how ESP32 gets boot-ed. Hoping the read will be an enjoyable one ! :) 
 
 
 **ESP32 Internal**
@@ -28,7 +28,7 @@ Now let's look into the following block diagram for better understanding what is
 
 ![](https://lh6.googleusercontent.com/xwFYV887r-xu51adSiY0CULZB6zY171si27Ing5Hz88bIm1FOHf1Kn9LRgOLWgYxTBTAZKCFBts8QcjuM-3W2t_qRW9u4Tpg0rcH0rw0cfyavguZwCzlIfgrV8uM5Z9GPP7d18tB)
 
-Here you can see that the ESP32 module has one mcu and one flash chip, both being connected via SPI. The esp32 microcontroller itself has a small ROM . The contents of the ROM are pre-programmed by the silicon vendor(espressif)
+Here you can see that the ESP32 module has one mcu and one flash chip, both being connected via SPI. The esp32 microcontroller itself has a small ROM . The First Stage bootloder resides in the ROM . It is pre-programmed by Espressif (the silicon vendor). 
 
 The important addresses are 
 
@@ -45,7 +45,7 @@ The microcontroller has 2 CPU , these are
 
 **Partition Table & FLash**
 
-Now let's understand the partition table . Just like we divide our laptop's hard disks into different partitions for example Drive C:/D:/E: ; one can divide the SPI flash of the ESP32 module into multiple partitions. different partitions can hold different types of data (e.g. calibration data, filesystems, parameters storage, OTA backup etc). 
+Now let's understand the partition table . Just like we divide our laptop's hard disks into different partitions for example Drive [ C: D: E:]. One can divide the SPI flash of the ESP32 module into multiple partitions. different partitions can hold different types of data (e.g. calibration data, filesystems, parameters storage, OTA backup etc). 
 
 Unlike other mcu manufacturer espressif gives us a lot of flexibility in flash space orientation provided the fact that the Flash is external of the mcu itself . Very clever and modular design! Obviously this type of SoC design has some drawbacks but we can talk on that later . Now back to partitioning . In order to implement the dividents A partition table needs to be flashed at memory address 0x8000. this table tells what kind of data gets into which partition. This can be configured using the menuconfig 
 
@@ -102,7 +102,7 @@ Following the reset of any kinds listed above, ESP32 will go through the followi
 
 9. If the 1st stage bootloader finds that UART download should be performed then it does so and puts the received bootloader.bin at offset 0x1000 in flash. ( This bootloader is called the 2nd stage bootloader). then it writes the application binary at the pre-set offset Address (0x10000)
 
-10. So once 1st stage bootloader finishes writing the binary data given by esptool.py desktop app, it jumps to 2nd stage bootloader.
+10. So once 1st stage bootloader finishes writing the binary data given by **esptool.py**, it jumps to 2nd stage bootloader.
 
 11. Getting jumped from 1st stage bootloader, The 2nd stage bootloader takes in control and starts running, at start it prints some informations via UART0 , reads partition table from offset 0x8000 & prints the partition table
 
@@ -110,9 +110,9 @@ Following the reset of any kinds listed above, ESP32 will go through the followi
 
 13. APP-CPU starts executing the Application binary machine instructions & Starts the FreeRtos Scheduler thus our application begins running
 
-14. During operation / normal runtime If any of the reset reason triggers then all the sequence happens again. 
+14. During operation / normal runtime If any of the reset sources triggers then all the sequence happens again. 
 
-15. If The First stage bootloder does not get any data over UART within a timeout then it jumps to the 2nd stage bootloader and all the subsequent steps occur as explained above.
+15. If The First stage bootloder does not get any data over UART within a fixed time then timeout occurs and it jumps to the 2nd stage bootloader and all the subsequent steps occur as explained above.
 
 ```text
 I (74) boot: Chip Revision: 1
@@ -154,7 +154,7 @@ I (298) cpu_start: Starting scheduler on PRO CPU.
 I (0) cpu_start: Starting scheduler on APP CPU.
 ```
 
-By embedding the 1st stage bootloader in esp32 mcu , espressif has made programming of the module very easy. This is one of the reason why esp32 module does not get bricked that much and the choice of the UART interface makes the programming experience much more easy compared to other mcu vendor ecosystems.
+By embedding the 1st stage bootloader in the esp32 mcu, espressif has made programming of the module very easy. In addition as UART interface is chosen for the transfer, the whole process becomes much easier not requiring complex tools like JTAG / ISP programmer. Still one can use the JTAG interface for programming / debugging but I will cover that in a later post. 
 
 **References:**
 
