grammer and spelling check

--- a/_posts/2019-11-03-esp32-boot-seq.md
+++ b/_posts/2019-11-03-esp32-boot-seq.md
@@ -13,14 +13,15 @@ sitemap:
   changefreq: 'monthly'
 ---
 
-When We start to learn a micrcontroller or SoC, we want to write a lot of code quickly and make use of all the available features / peripherals. But I think acquiring proper knowledge on the boot sequence of an mcu is also very important. 
+When We start to learn a microcontroller or SoC, we want to write a lot of code quickly and make use of all the available features / peripherals. But I think acquiring proper knowledge on the boot sequence of an mcu is also very important. 
 
-I have seen embedded products getting stuck / hung in boot mode. Most of the times the reasons are developer not spending enough time on reading the datasheet & missing out important hardware notes or fuse bit settings. Knowing the exact booting information will also help the programmer to plan or debug better. In this blog post I would like to explain how ESP32 gets boot-ed. Hoping the read will be an enjoyable one ! :) 
+I have seen embedded products getting stuck / hung in boot mode. Most of the time the reasons are developers not spending enough time on reading the datasheet & missing out important hardware notes or fuse bit settings. Knowing the exact booting information will also help the programmer to plan or debug better. In this blog post I would like to explain how ESP32 gets boot-ed. 
+I hope the read will be an enjoyable one ! :) 
 
 
 **ESP32 Internal**
 
-Here in this below picture you can see the internals of an ESP32 module . if you decap the metal plate of the module you will see inside It has mainly 2 silicon chips one is the esp32 mcu and other one is a SPI based flash chip. 
+Here in the picture below you can see the internals of an ESP32 module . if you decap the metal plate of the module you will see inside It has mainly 2 silicon chips one is the esp32 mcu and other one is a SPI based flash chip. 
 
 <img src="https://lh5.googleusercontent.com/8WvqZWXf1DCf_henYiSVPQcKFoNZGgRgWoXHlV7om-PqxNZn6UEswDnqjqbS2Oj8hrDGrLOevnFmbd2BZ3Jl-c6j1rxeQnOQDkAjoY5Ji5rZGafSN_48wWgyqZfOVfm1LohdwtNi" width="720" height="480" style="display: block; margin: 0 auto">
 
@@ -28,7 +29,7 @@ Now let's look into the following block diagram for better understanding what is
 
 ![](https://lh6.googleusercontent.com/xwFYV887r-xu51adSiY0CULZB6zY171si27Ing5Hz88bIm1FOHf1Kn9LRgOLWgYxTBTAZKCFBts8QcjuM-3W2t_qRW9u4Tpg0rcH0rw0cfyavguZwCzlIfgrV8uM5Z9GPP7d18tB)
 
-Here you can see that the ESP32 module has one mcu and one flash chip, both being connected via SPI. The esp32 microcontroller itself has a small ROM . The First Stage bootloder resides in the ROM . It is pre-programmed by Espressif (the silicon vendor). 
+Here you can see that the ESP32 module has one mcu and one flash chip, both being connected via SPI. The esp32 microcontroller itself has a small ROM . The First Stage bootloader resides in the ROM . It is pre-programmed by Espressif (the silicon vendor). 
 
 The important addresses are 
 
@@ -47,7 +48,7 @@ The microcontroller has 2 CPU , these are
 
 Now let's understand the partition table . Just like we divide our laptop's hard disks into different partitions for example Drive [ C: D: E:]. One can divide the SPI flash of the ESP32 module into multiple partitions. different partitions can hold different types of data (e.g. calibration data, filesystems, parameters storage, OTA backup etc). 
 
-Unlike other mcu manufacturer espressif gives us a lot of flexibility in flash space orientation provided the fact that the Flash is external of the mcu itself . Very clever and modular design! Obviously this type of SoC design has some drawbacks but we can talk on that later . Now back to partitioning . In order to implement the dividents A partition table needs to be flashed at memory address 0x8000. this table tells what kind of data gets into which partition. This can be configured using the menuconfig 
+Unlike other mcu manufacturers espressif gives us a lot of flexibility in flash space orientation provided the Flash is external to the mcu itself . Very clever and modular design! Obviously this type of SoC design has some drawbacks but we can talk about that later . Now back to partitioning . In order to implement the dividends A partition table needs to be flashed at memory address 0x8000. This table tells what kind of data gets into which partition. This can be configured using the menuconfig 
 
 <img src="https://lh3.googleusercontent.com/NJQIgMVwUKfCyChoAcrXQbr5CwrRxMRy4wiAflQuP7MIVkxmAu1Vvzoj-cgSdt1cAmLlHFXM7g2pA36xDWVQS2ZLRRclh690yDRId2YgHTyumh5-fW6RXlwd4VMysQUC0uANpfe6" em=caption>
 
@@ -106,13 +107,13 @@ Following the reset of any kinds listed above, ESP32 will go through the followi
 
 11. Getting jumped from 1st stage bootloader, The 2nd stage bootloader takes in control and starts running, at start it prints some informations via UART0 , reads partition table from offset 0x8000 & prints the partition table
 
-12. after 2nd stage bootloder gets done printing some useful information, PRO-CPU prints some other info and trasnfers the control over to the the APP-CPU
+12. after 2nd stage bootloader gets done printing some useful information, PRO-CPU prints some other info and transfers the control over to the the APP-CPU
 
 13. APP-CPU starts executing the Application binary machine instructions & Starts the FreeRtos Scheduler thus our application begins running
 
 14. During operation / normal runtime If any of the reset sources triggers then all the sequence happens again. 
 
-15. If The First stage bootloder does not get any data over UART within a fixed time then timeout occurs and it jumps to the 2nd stage bootloader and all the subsequent steps occur as explained above.
+15. If The First stage bootloader does not get any data over UART within a fixed time then timeout occurs and it jumps to the 2nd stage bootloader and all the subsequent steps occur as explained above.
 
 ```text
 I (74) boot: Chip Revision: 1
@@ -154,7 +155,7 @@ I (298) cpu_start: Starting scheduler on PRO CPU.
 I (0) cpu_start: Starting scheduler on APP CPU.
 ```
 
-By embedding the 1st stage bootloader in the esp32 mcu, espressif has made programming of the module very easy. In addition as UART interface is chosen for the transfer, the whole process becomes much easier not requiring complex tools like JTAG / ISP programmer. Still one can use the JTAG interface for programming / debugging but I will cover that in a later post. 
+By embedding the 1st stage bootloader in the esp32 mcu, espressif has made programming of the module very easy. In addition, as the UART interface is chosen for the transfer, the whole process becomes much easier, not requiring complex tools like JTAG / ISP programmers. Still one can use the JTAG interface for programming / debugging but I will cover that in a later post. 
 
 **References:**
 
