--- a/_posts/2019-11-03-esp32-boot-seq.md
+++ b/_posts/2019-11-03-esp32-boot-seq.md
@@ -13,10 +13,9 @@ sitemap:
   changefreq: 'monthly'
 ---
 
-When We start to learn a microcontroller or SoC, we want to write a lot of code quickly and make use of all the available features / peripherals. But I think acquiring proper knowledge on the boot sequence of an mcu is also very important. 
+When We start to learn a microcontroller or SoC, we want to write a lot of code quickly and make use of all the available features/peripherals. But I think acquiring proper knowledge of the boot sequence of an MCU is also very important.
 
-I have seen embedded products getting stuck / hung in boot mode. Most of the time the reasons are developers not spending enough time on reading the datasheet & missing out important hardware notes or fuse bit settings. Knowing the exact booting information will also help the programmer to plan or debug better. In this blog post I would like to explain how ESP32 gets boot-ed. 
-I hope the read will be an enjoyable one ! :) 
+I have seen embedded products getting stuck/hung in boot mode. Most of the time the reasons are developers not spending enough time on reading the datasheet & missing out on important hardware notes or fuse bit settings. Knowing the exact booting information will also help the programmer to plan or debug better. In this blog post, I would like to explain how ESP32 gets boot-ed. I hope the read will be an enjoyable one! :) 
 
 
 **ESP32 Internal**
